<resources>
    <string name="app_name">EcommerceApp</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Card</string>
    <string name="menu_gallery">Orders</string>
    <string name="Category">Category</string>
    <string name="Settings">Personal Info</string>
    <string name="logout">logout</string>
    <string name="Search">search</string>
</resources>
