<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_card"
            android:icon="@drawable/nav_cart"
            android:iconTint="@android:color/white"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/orders"
            android:iconTint="@android:color/white"
            android:title="@string/Search" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/category"
            android:iconTint="@android:color/white"
            android:title="@string/Category" />
        <item
            android:id="@+id/nav_persona_info"
            android:icon="@drawable/profile"
            android:iconTint="@android:color/white"
            android:title="@string/Settings" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:iconTint="@android:color/white"
            android:title="@string/logout" />

    </group>


</menu>
